<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context="MainActivity2">

    <EditText
        android:id="@+id/cost_1"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="420dp"
        android:background="#FFFFFF"
        android:hint="@string/hint_cost"
        android:inputType=TYPE_CLASS_TEXT
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="430dp"
        android:layout_toStartOf="@+id/cost_1"
        android:gravity="center"
        android:text="@string/cost1_text"
        android:textColor="#FFFF00"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:layout_toStartOf="@+id/gramms_1"
        android:text="@string/gramms1_text"
        android:textColor="#FFFF00"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="260dp"
        android:layout_toStartOf="@+id/cost_2"
        android:text="@string/cost2_text"
        android:textColor="#FFFF00"
        android:gravity="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="200dp"
        android:layout_toStartOf="@+id/gramms_2"
        android:text="@string/gramms2_text"
        android:textColor="#FFFF00"
        android:gravity="center"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/gramms_2"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="190dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_gramms"
        android:inputType="number"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/cost_2"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="250dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_cost"
        android:inputType="numberDecimal"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/gramms_1"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="360dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_gramms"
        android:inputType="number"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="59dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="659dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/Oglavlenie_Activity2"
        android:textColor="#FFEB3B"
        android:textSize="22dp" />

    <Button
        android:id="@+id/begin_sravnenie_button"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="94dp"
        android:background="#FF0000"
        android:gravity="center"
        android:onClick="onClickCompare"
        android:text="@string/begin_sravnenie_button"
        android:textColor="#CDDC39"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/begin_sravnenie_button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/credits" />

    <ImageView
        android:id="@+id/hmm_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cost_1"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="45dp"
        app:srcCompat="@drawable/thinking_wolf" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>